--- a/web-data-viz/public/assets/styles/dashAdmin.css
+++ b/web-data-viz/public/assets/styles/dashAdmin.css
@@ -18,12 +18,33 @@ body {
   overflow-x: hidden;
 }
 
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #000;
+    border-bottom-color: #04708D;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
+
 .containerFabricas {
-  gap: 200px;
+  overflow-y: auto;
+  overflow-x:hidden;
   background: white;
   border-radius: 12px;
-  height: 65vh;
-  width: fit-content;
+  height: 66.5vh;
+  width: 30%;
   padding: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
@@ -34,21 +55,29 @@ body {
 
 .cards-container {
   margin-top: 20px;
-  width: 500px;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  gap: 20px;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 15px;
 }
 
 .card {
-  padding: 20px;
+  width: 48.3%;
+  padding: 18px;
   border-radius: 10px;
   color: white;
   cursor: pointer;
+  transition: 0.3s;
+}
+
+.card i {
+  font-size: 22px;
 }
 
 .card:hover {
   opacity: 0.9;
+  transform: scale(1.04);
 }
 
 .card-critico {
@@ -74,7 +103,7 @@ body {
   background-color: rgba(0, 0, 0, 0.2);
   padding: 4px 8px;
   border-radius: 4px;
-  font-size: 12px;
+  font-size: 17px;
 }
 
 .card-titulo {
@@ -84,7 +113,7 @@ body {
 }
 
 .card-info {
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .card-info div {
@@ -108,8 +137,7 @@ body {
   margin: 10% auto;
   padding: 30px;
   border-radius: 10px;
-  width: 90%;
-  max-width: 400px;
+  max-width: 560px;
   color: black;
 }
 
@@ -123,7 +151,7 @@ body {
 }
 
 .modal-title {
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
   color: #2563eb;
 }
@@ -131,12 +159,13 @@ body {
 .close-btn {
   background: none;
   border: none;
-  font-size: 24px;
+  font-size: 60px;
   cursor: pointer;
   color: #666;
 }
 
 .modal-info {
+  font-size: 25px;
   display: flex;
   justify-content: space-between;
   padding: 8px 0;
@@ -188,8 +217,8 @@ body {
 
 #dataInfo {
   display: flex;
-  font-size: 20px;
-  font-weight: 500;
+  font-size: 27px;
+  font-weight: 550;
 }
 
 .tituloDash {
@@ -204,6 +233,10 @@ body {
   gap: 5px;
 }
 
+.texto p{
+  font-size: 22px;
+}
+
 #titulo {
   font-size: 25px;
   font-weight: bold;
@@ -215,6 +248,11 @@ body {
   position: fixed;
   right: 0;
   bottom: 0;
+  transition: 0.3s;
+}
+
+.bobAlerta:hover {
+  transform: scale(1.1);
 }
 
 .bobAlerta img {
@@ -225,7 +263,12 @@ body {
   cursor: pointer;
   width: fit-content;
   position: absolute;
-  right: 300px;
+  right: 250px;
+  transition: 0.3s;
+}
+
+.bobPredicao:hover {
+  transform: scale(1.1);
 }
 
 .bobPredicao img {
@@ -236,9 +279,9 @@ body {
   background-color: white;
   display: flex;
   flex-direction: column;
-  width: 94vw;
+  width: 100vw;
   height: fit-content;
-  margin-left: 5vw;
+  margin-left: 2.5vw;
   align-items: center;
   gap: 12px;
 }
@@ -539,7 +582,7 @@ body {
   padding: 1vw;
   width: 22vw;
   height: 13.5vh;
-  font-size: 18px;
+  font-size: 17px;
   color: black;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
   font-weight: bold;
@@ -583,7 +626,12 @@ body {
 }
 
 .filtrar h3 {
-  font-size: 15px;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.filtrar i {
+  font-size: 25px;
   font-weight: 700;
 }
 
@@ -730,14 +778,16 @@ body {
   background-color: white;
   border-radius: 10px;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
-  z-index: 1000;
-  visibility: hidden;
-  transition: ease-in-out;
+  z-index: -1;
+  opacity: 0;
+  transform: scale(0.3);
+  transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .ativo {
-  visibility: visible;
-  transition: ease-in-out;
+  z-index: 1000;
+  opacity: 1;
+  transform: scale(1);
 }
 
 .fechar {
@@ -779,13 +829,58 @@ h1 {
 }
 
 .fabrica {
-  width: 120px;
-  height: 80px;
+  cursor: pointer;
+  width: fit-content;
+  height: 90px;
   background-color: white;
   border: 1px solid #ccc;
   padding: 10px;
   text-align: center;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.tituloModal {
+  font-size: 20px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+
+.sltInvisivel {
+    position: relative;
+    width: 130px;
+    border-bottom: 2px solid black;
+    font-family: Arial, sans-serif;
+    transition: 0.3s ease;
+}
+
+.sltInvisivel select {
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border: none;
+    background: transparent;
+    width: 100%;
+    padding: 5px 25px 5px 0;
+    font-size: 20px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.sltInvisivel:hover {
+    transform: scale(1.05);
+    transition: 0.3s ease;
+}
+
+.sltInvisivel::after {
+    content: '▼';
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 15px;
+    pointer-events: none;
 }
 
 .critico {
@@ -809,12 +904,14 @@ h1 {
 }
 
 .nome-fabrica {
+  font-size: 20px;
   font-weight: bold;
   margin-bottom: 5px;
 }
 
 .id-fabrica {
-  font-size: 12px;
+  font-size: 15px;
+  font-weight: 1000;
   color: #666;
 }
 
@@ -850,7 +947,7 @@ h1 {
 }
 
 .div-selecionada {
-  border: 2px solid blue;
+  border: 3px solid blue;
 }
 
 @media screen and (max-width: 1400px) {
