--- a/web-data-viz/public/assets/styles/dashDuda.css
+++ b/web-data-viz/public/assets/styles/dashDuda.css
@@ -90,6 +90,7 @@ body {
   transform: translateY(-1vw) rotate(135deg);
   cursor: pointer;
 }
+
 /*  */
 
 .nav-burger {
@@ -131,10 +132,12 @@ body {
     width: 100%;
     display: flex;
     align-items: center;
+
     /* transition: all 1s; */
     & li i {
       font-size: 40px;
     }
+
     & span {
       display: none;
     }
@@ -186,6 +189,7 @@ body {
   .nav-links-expanded {
     /* animation: expandir 10s linear; */
     margin-left: 5px;
+
     & li {
       display: flex;
       justify-content: flex-start;
@@ -217,6 +221,7 @@ body {
     from {
       width: 5%;
     }
+
     to {
       width: 20%;
     }
@@ -226,6 +231,7 @@ body {
     from {
       width: 20%;
     }
+
     to {
       width: 5%;
     }
@@ -305,7 +311,7 @@ body {
 }
 
 .kpiUso {
- display: flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   background: white;
@@ -322,7 +328,7 @@ body {
 }
 
 .kpiCorrelacao {
- display: flex;
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -338,9 +344,10 @@ body {
   font-weight: bold;
 }
 
-.dadoCor{
+.dadoCor {
   font-size: 18px;
 }
+
 .tituloKpi {
   text-align: center;
   display: flex;
@@ -353,6 +360,7 @@ body {
 .kpiUso h2 {
   font-size: 17px;
 }
+
 .kpiUso h3 {
   font-size: 13px;
   font-weight: bolder;
@@ -365,10 +373,11 @@ body {
   color: #04708d;
 }
 
-.txtCor{
+.txtCor {
   color: #5c5b5b;
   font-size: 15px;
 }
+
 /* 
 #graficoAlertaFabricas {
   background-color: white;
@@ -412,7 +421,7 @@ body {
 
 
 
-.graficoPeriodo{
+.graficoPeriodo {
   width: 70%;
   background-color: #ffffff;
   padding: 0.5vw;
@@ -422,8 +431,8 @@ body {
 
 }
 
-.graficoCorrelacao{
-   width: 63%;
+.graficoCorrelacao {
+  width: 63%;
   background-color: #ffffff;
   padding: 0.5vw;
   border-radius: 1vw;
@@ -431,12 +440,12 @@ body {
   gap: 2vw;
 }
 
-.graficoPix{
+.graficoPix {
   width: 100%;
   height: 90%;
 }
 
-.tabelaProcessos{
+.tabelaProcessos {
   display: flex;
   flex-direction: column;
   background-color: #ffffff;
@@ -444,12 +453,12 @@ body {
   border-radius: 1vw;
   height: 400px;
   width: 40%;
-  gap: 1vw;
+  gap: 0.5vw;  
 
 }
 
 
-.pixTexto{
+.pixTexto {
   display: flex;
   flex-direction: column;
   background-color: #ffffff;
@@ -460,58 +469,91 @@ body {
   gap: 1vw;
 }
 
+componentesContainer {
+  width: 100%;
+  margin-top: 2%;
+  height: 60%;
+  /* background-color: #fff; */
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  /* display: flex;
+    flex-direction: column; */
+  overflow-x: auto;
+  /* justify-content:; */
+}
+
 .componentesContainer {
-    width: 100%;
-    /* background-color: #ffffff3a; */
-    border-radius: 10px;
-    border-spacing: 0 10px;
-  }
-  
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    background-color: #fff;
-  }
+  width: 100%;
+  background-color: #ffffff3a;
+  border-radius: 10px;
+  border-spacing: 0 10px;
+}
 
-  table i {
-    font-size: 10%;
-    }
-  
-  thead {
-    background-color: #011f27;
-    color: white;
-    /* border-radius: %; */
-  }
-  
-  th,
-  td {
-    padding: 5px 8px;
-    /* text-align: left; */
-    border-bottom: 1px solid #ddd;
-  }
-  
-  tbody tr:hover {
-    background-color: #f1f5ff;
-  }
-  
-  /* Zebra stripes */
-  tbody tr:nth-child(even) {
-    background-color: #f9f9f9;
-  }
-  
-  .componentesContainer td:nth-child(7) {
-    cursor: pointer;
-    /* font-size: 30px; */
-    border-radius: 10%;
-  }
+table {
+  width: 100%;
+  border-collapse: collapse;
+  background-color: #fff;
+  border-radius: 30px;
 
- .titulo{
-    display: flex;
-    /* gap: 2vw; */
-    justify-content: space-around;
-  }
+}
 
-.chartPeriodo{
+table i {
+  font-size: 150%;
+}
+
+thead {
+  background-color: #011f27;
+  color: white;
+  border-radius: 30px;
+}
+
+th,
+td {
+  padding: 8px 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+
+
+thead tr td:nth-child(1) {
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+
+}
+
+thead tr td:nth-child(5) {
+  border-top-right-radius: 10px;
+}
+
+
+
+tbody {
+  border-radius: 7px;
+
+}
+
+tbody tr:hover {
+  background-color: #f1f5ff;
+}
+
+/* Zebra stripes */
+tbody tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.componentesContainer td:nth-child(7) {
+  cursor: pointer;
+  /* font-size: 30px; */
+}
+
+.titulo {
+  display: flex;
+  /* gap: 2vw; */
+  justify-content: space-around;
+}
+
+.chartPeriodo {
   background-color: white;
   width: 100%;
   height: 90%;
@@ -521,40 +563,40 @@ body {
   border-radius: 1vw;
 }
 
-.iconeFiltro{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(270deg, #012027, #04708d);
-    border-radius: 10%;
-    width: 6%;
-    height: 100%;
-    transition: 0.3s;
+.iconeFiltro {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(270deg, #012027, #04708d);
+  border-radius: 10%;
+  width: 6%;
+  height: 100%;
+  transition: 0.3s;
 }
 
-.iconeFiltro:hover{
-    cursor: pointer;
-    transform: scale(1.1);
-    transition: 0.3s;
-    background-color: #3d5268;
+.iconeFiltro:hover {
+  cursor: pointer;
+  transform: scale(1.1);
+  transition: 0.3s;
+  background-color: #3d5268;
 
 }
 
 
-option{
+option {
   background-color: #012027;
 }
 
 .modal {
- display: none;
- position: fixed;
- z-index: 1;
- left: 0;
- top: 0;
- width: 100%;
- height: 100%;
- overflow: auto;
- background-color: rgba(0, 0, 0, 0.4);
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal .content {
@@ -568,6 +610,7 @@ option{
   flex-direction: column;
   align-items: center;
 }
+
 .fechar {
   margin-bottom: 10px;
   cursor: pointer;
@@ -575,7 +618,7 @@ option{
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #B9B9B9; 
+  background-color: #B9B9B9;
   width: 10%;
   border-radius: 7px;
 }
@@ -598,87 +641,88 @@ h1 {
   /* margin-bottom: 20px; */
 }
 
-.tempoReal{
-    width: 100%;
-    height: 100% ;
-    /* padding: 0.7vw 0 ; */
-    display: flex;
-    flex-direction: row;
-    gap: 2vw;
+.tempoReal {
+  width: 100%;
+  height: 100%;
+  /* padding: 0.7vw 0 ; */
+  display: flex;
+  flex-direction: row;
+  gap: 2vw;
 
 }
 
-div .servidor{
+div .servidor {
   /* width: 20%;
   height: fit-content; */
-    display: flex;
-    flex-direction: row;
-    gap: 1vw;
+  display: flex;
+  flex-direction: row;
+  gap: 1vw;
 }
 
-div .servidor select{
-    background: linear-gradient(270deg, #012027, #04708d);
-        color: white;
-        border: none;
-        border-radius: 3vw;
-        padding: 0.5vw 1vw;
-        font-family: 'Montserrat';
-        font-weight: bold;
-        /* font-size: 1.1vw; */
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        gap: 0.5vw;
-        transition: 0.3s;
-        box-shadow: 0.3vw 0.3vw 0.7vw rgba(0, 0, 0, 0.2);
+div .servidor select {
+  background: linear-gradient(270deg, #012027, #04708d);
+  color: white;
+  border: none;
+  border-radius: 3vw;
+  padding: 0.5vw 1vw;
+  font-family: 'Montserrat';
+  font-weight: bold;
+  /* font-size: 1.1vw; */
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 0.5vw;
+  transition: 0.3s;
+  box-shadow: 0.3vw 0.3vw 0.7vw rgba(0, 0, 0, 0.2);
 }
 
 .botaoGraficoContainer {
-        display: flex;
-        justify-content: center;
-        width: 100%;
-        margin: 1.5vw 0;
-    }
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin: 1.5vw 0;
+}
 
-    .botaoGrafico {
-        background: linear-gradient(270deg, #012027, #04708d);
-        color: white;
-        border: none;
-        border-radius: 3vw;
-        padding: 0.2vw 1vw;
-        font-family: 'Montserrat';
-        font-weight: bold;
-        font-size: 0.9vw;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        gap: 0.5vw;
-        transition: 0.3s;
-        box-shadow: 0.3vw 0.3vw 0.7vw rgba(0, 0, 0, 0.2);
-    }
+.botaoGrafico {
+  background: linear-gradient(270deg, #012027, #04708d);
+  color: white;
+  border: none;
+  border-radius: 3vw;
+  padding: 0.2vw 1vw;
+  font-family: 'Montserrat';
+  font-weight: bold;
+  font-size: 0.9vw;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 0.5vw;
+  transition: 0.3s;
+  box-shadow: 0.3vw 0.3vw 0.7vw rgba(0, 0, 0, 0.2);
+}
 
-    input[type="date"]{
-        background: linear-gradient(270deg, #012027, #04708d);
-        color: white;
-        border: none;
-        border-radius: 3vw;
-        padding: 0.2vw 1vw;
-        font-family: 'Montserrat';
-        font-weight: bold;
-        /* font-size: 1.1vw; */
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        gap: 0.5vw;
-        transition: 0.3s;
-        box-shadow: 0.3vw 0.3vw 0.7vw rgba(0, 0, 0, 0.2);
-    }
-    ::-webkit-calendar-picker-indicator{
-      background-color: white;
-      cursor: pointer;
-      border-radius: 3%;
-    }
-  
+input[type="date"] {
+  background: linear-gradient(270deg, #012027, #04708d);
+  color: white;
+  border: none;
+  border-radius: 3vw;
+  padding: 0.2vw 1vw;
+  font-family: 'Montserrat';
+  font-weight: bold;
+  /* font-size: 1.1vw; */
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 0.5vw;
+  transition: 0.3s;
+  box-shadow: 0.3vw 0.3vw 0.7vw rgba(0, 0, 0, 0.2);
+}
+
+::-webkit-calendar-picker-indicator {
+  background-color: white;
+  cursor: pointer;
+  border-radius: 3%;
+}
+
 /* 
     .containerGraficoCpuVendas {
         width: 98%;
