primeira tentativa integração bob analista

--- a/web-data-viz/public/assets/styles/monitoramentoGestaoInfra.css
+++ b/web-data-viz/public/assets/styles/monitoramentoGestaoInfra.css
@@ -17,6 +17,43 @@
   
 }
 
+.bobPredicao {
+  cursor: pointer;
+  width: fit-content;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  transition: 0.3s;
+}
+
+.bobPredicao:hover {
+  transform: scale(1.1);
+}
+
+.bobPredicao img {
+  width: 100px;
+}
+
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #000;
+    border-bottom-color: #04708D;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
+
 
 /* ========== BARRA LATERAL ========== */
 .menu {
