--- a/web-data-viz/public/assets/styles/dashMonitoramento-vitor.css
+++ b/web-data-viz/public/assets/styles/dashMonitoramento-vitor.css
@@ -87,6 +87,7 @@ textarea {
   transform: translateY(-1vw) rotate(135deg);
   cursor: pointer;
 }
+
 /*  */
 
 .nav-burger {
@@ -128,10 +129,12 @@ textarea {
     width: 100%;
     display: flex;
     align-items: center;
+
     /* transition: all 1s; */
     & li i {
       font-size: 40px;
     }
+
     & span {
       display: none;
     }
@@ -183,6 +186,7 @@ textarea {
   .nav-links-expanded {
     /* animation: expandir 10s linear; */
     margin-left: 5px;
+
     & li {
       display: flex;
       justify-content: flex-start;
@@ -214,6 +218,7 @@ textarea {
     from {
       width: 5%;
     }
+
     to {
       width: 20%;
     }
@@ -223,11 +228,13 @@ textarea {
     from {
       width: 20%;
     }
+
     to {
       width: 5%;
     }
   }
 }
+
 /* Termino NavBar */
 
 .perfilContainer {
@@ -395,6 +402,7 @@ tbody tr:nth-child(even) {
   align-items: flex-end;
   justify-content: flex-end;
 }
+
 .pagination button {
   margin: 0 3px;
   padding: 5px 10px;
@@ -404,6 +412,7 @@ tbody tr:nth-child(even) {
   border-radius: 5px;
   cursor: pointer;
 }
+
 .pagination button.active {
   background-color: #008;
 }
@@ -421,20 +430,24 @@ tbody tr:nth-child(even) {
 }
 
 .tempo_atividade {
-  border-radius: 10px;
+  border-radius: 12px;
   background: #fff;
   /* background: linear-gradient(270deg, #012027, #04708d); */
   color: #000;
+  padding: 1vw;
   border: 1px solid #04708d;
+  border-bottom: 5px solid #04708d;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
-
+  font-weight: bold;
 }
 
-#qtdServidoresCritico{
+
+
+#qtdServidoresCritico {
   color: #04708d;
 }
 
-#qtdServidoresAtencao{
+#qtdServidoresAtencao {
   color: #04708d;
 }
 
@@ -506,13 +519,13 @@ table i:hover {
   height: 1%;
 }
 
-.critico{
+.critico {
   border: 1px solid #dc2626;
   background-color: #dc2626;
   color: #fff;
 }
 
-.atencao{
+.atencao {
   border: 1px solid yellow;
   background-color: #ead308;
   color: #000;
